--- a/homework2/index.html
+++ b/homework2/index.html
@@ -24,7 +24,7 @@
         <li>Хедер</li>
         <li>boby</li>
         <li>footer</li>
-        <li>logo <a href="https://z7.pngzero.com/images/11048/transparent/png-World-Wide-Web-World-Wide-Web-Icon.png">Логотип</a></li>
+        <li>logo <a href="https://lmm.web-vizitka.kz/favImage.png"> Логотип</a></li>
     </ol>
     <p>С сайтом ещего много предстоит работать.</p>
     <p>В частности с CSS. А именно:</p>
